<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sojun.favoritegot7.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_title"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkbox_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_lbl"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_quest"
        android:textSize="20sp"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <RadioButton
            android:id="@+id/radio_jb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got7_jb"/>

        <RadioButton
            android:id="@+id/radio_jinyoung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got7_jinyoung"/>

        <RadioButton
            android:id="@+id/radio_youngjae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got7_youngjae"/>
   </RadioGroup>

    <Button
        android:id="@+id/but_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_lbl" />

    <ImageView
        android:id="@+id/imgv_got7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/got7_jb"
        android:visibility="invisible"/>

</LinearLayout>